// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GifExpertApp /> should show category list 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="developer"
      key="developer"
    />
    <GifGrid
      category="lol"
      key="lol"
    />
  </ol>
</Fragment>
`;

exports[`<GifExpertApp /> should show component correctly 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
